imperative-tests/tests/collisions/mixed_bin_hex.stderr
error: Opcode collides with other opdcode
 --> $DIR/mixed_bin_hex.rs:8:17
  |
8 |     #[ opcode = "0b11111111_11111111_11111111" ]
  |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Collides with this opcode
 --> $DIR/mixed_bin_hex.rs:6:17
  |
6 |     #[ opcode = "0xff_ff_ff" ]
  |                 ^^^^^^^^^^^^
